k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-worker
  labels:
    app: ticketing-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-worker
  template:
    metadata:
      labels:
        app: ticketing-worker
    spec:
      containers:
        - name: ticketing-worker
          image: registry.ocp4.example.com:8443/developer/ticketing-worker:1.0
