k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-api
  labels:
    app: ticketing-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-api
  template:
    metadata:
      labels:
        app: ticketing-api
    spec:
      containers:
        - name: ticketing-api
          image: registry.ocp4.example.com:8443/developer/ticketing-api:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-api
spec:
  selector:
    app: ticketing-api
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ticketing-api
spec:
  host: ticketing-api-ticketing-platform.apps.ocp4.example.com
  to:
    kind: Service
    name: ticketing-api
  port:
    targetPort: 8080
