k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-frontend
  labels:
    app: ticketing-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-frontend
  template:
    metadata:
      labels:
        app: ticketing-frontend
    spec:
      containers:
        - name: ticketing-frontend
          image: registry.ocp4.example.com:8443/developer/ticketing-frontend:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-frontend
spec:
  selector:
    app: ticketing-frontend
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ticketing-frontend
spec:
  host: ticketing-frontend-ticketing-platform.apps.ocp4.example.com
  to:
    kind: Service
    name: ticketing-frontend
  port:
    targetPort: 3000
